@@ -9,6 +9,8 @@ bingd 0.3.1
 * Add S3 reporter functions for verbose option
 * calc.pr() and calc.conditionals() results are now S3 objects
 
+* A p-value risk threshold is now calculated if one isn't provided
+
 bingd 0.3.0
 ===========
 
